--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HFSPro</string>
     <string name="wjmm"><u>忘记账号密码？点我打开好分数官网找回</u></string>
+    <string name="yytoken"><u>已有token？点击使用token登陆</u></string>
 </resources>
